<resources>
    <string name="app_name">MyBopIt</string>
    <string name="app_author">Panita, PanitaGames.cl</string>
    <string name="app_description">Este proyecto es un piloto para evaluar la factibilidad
        de poder desarrollar dentro de Android una aplicacion que implemente un
        juego que emule el conocido bop it</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="button_activity_victory">Victory</string>
    <string name="Defeat">Defeat</string>
    <string name="GameSound">Game Sound</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="speedUp">Speed Up</string>
    <string name="Sounds">Sounds</string>
    <string name="Sensors">Sensors</string>
    <string name="Game">SinglePlayer</string>
    <string name="Difficulty">Dificulty</string>
    <string name="Successes">Number of Success</string>
    <string name="gameOverText">Game Over</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Splash Preferences -->
    <string name="splash_title">Duración Inicio</string>
    <string name="splash_description">Duracion de la pantalla de presentación</string>

    <!-- Menu buttons -->
    <string name="AboutButton">About</string>
    <string name="PreferencesButton">Preferences</string>
    <string name="HistoryButton">History</string>
    <string name="InstructionsButton">Instructions</string>

    <string name="BacksButton">Back</string>

    <!-- Settings -->
    <string name="Username">Insert your name</string>
    <string name="Score">99</string>
    <string name="HighScore">High Score</string>
    <string name="DefaultPresets">Restore default values</string>


</resources>